mat-jon.github.io

--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
     <head>
         <meta charset="utf-8">
         <title>Project: Blog</title>
+        <style>
+            #koka{color:rgb(110,100,0);
+                background-color:rgb(0,0,100);
+            }
+              body{ background-color:rgb(245, 68, 204);}
+        </style>
     </head>
     <body>
         
-        <h1>I love math</h1>
+        <h1 id="koka">I love math</h1>
         <h4>Këtu mund të mësoni matematikën duke u argëtuar.</h4>
         <h3>Contents</h3>
         <ul>
